--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 	<link rel="stylesheet" type="text/css" href="lib/bootstrap.css">
 	<!--main css-->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<!--fontawesome js-->
 	<script src='https://kit.fontawesome.com/a076d05399.js'></script>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	
 </head>
 <body>
 
@@ -107,9 +108,10 @@
 				</div>
 				<div class="col">
 					<h4>AROUND THE WEB</h4>
-					<a href="#" class="fa fa-facebook"></a>
-					<a href="#" class="fa fa-twitter"></a>
-					<a href="#" class="fa fa-google"></a>
+					<i class='fab fa-facebook'></i>
+				    <i class='fab fa-twitter'></i>
+					<i class='fab fa-google'></i>
+
 				</div>
 				<div class="col">
 					<h4>About</h4><hr>
